# robotframeworkNL

./: .gitignore  LICENSE  README.md  pyproject.toml  robotnl-libdoc.html  setup.cfg
atest/: run_tests.py
atest/robotNL tests/: base.resource
atest/robotNL tests/01__Check that/Operators/: Basic_operators.robot  List-like_operators.robot  base.resource  typed_keywords.py
atest/robotNL tests/02__Inline kw arguments/: inline_kw_args.py  inline_kw_args.robot
atest/robotNL tests/03__Custom data types/: 01__Box type.robot  02__Embedded_argument_objects.robot  Boxes.py  base.resource
atest/robotNL tests/Check that/Operators/: Basic_operators.robot  List-like_operators.robot  Text_operators.robot  Typed_checks.robot
atest/robotNL tests/Inline kw arguments/: LibDoc.robot  inline_kw_args.py  inline_kw_args.robot  lib.py  libdoclib.py
docs/: robotnl-libdoc.html
robotframeworkNL/: RobotChecks.py  robotframeworkNL.robot
robotnl/: CheckOperator.py  RobotChecks.py  __init__.py  inline_keywords.py
