[metadata]
name = robotframework-nl
version = 1.1.1
author = Johan Foederer
author_email = github@famfoe.nl
description = robotframework-nl is a proving ground to boost Robot framework closer to Natural Language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JFoederer/robotframeworkNL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6